tests/ui/proc-macro/derive-helper-legacy-spurious.stderr
error: cannot find attribute `dummy` in the crate root
  --> $DIR/derive-helper-legacy-spurious.rs:3:4
   |
LL | #![dummy]
   |    ^^^^^ not found in the crate root

error: cannot find attribute `empty_helper` in the crate root
  --> $DIR/derive-helper-legacy-spurious.rs:9:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^ not found in the crate root

error: aborting due to 2 previous errors

